--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -74,11 +74,11 @@
                     </div>
 
                     <div class="reservar" strong>
-                        <a href="/productos/detalle-producto/<%= guarderia.id  %>">Reservar</a></strong>
+                        <a href="/productos/detalle-producto/<%= guarderia.id  %>">Ver Guarderia</a></strong>
                         <i class="fas fa-paw huellita-reserva"></i>
                     </div>
 
-                    <div class="editar-producto" strong>
+                    <!-- <div class="editar-producto" strong>
                         <a href="/productos/editar-producto/<%= guarderia.id %>">Editar producto</a></strong>
                         <i class="fas fa-paw huellita-reserva"></i>
                     </div>
@@ -88,6 +88,11 @@
                         <i class="fas fa-paw huellita-reserva"></i>
                     </div>
 
+                    <div class="eliminar-producto" strong>
+                        <a href="/productos/eliminar-producto">Eliminar Producto</a></strong>
+                        <i class="fas fa-paw huellita-reserva"></i>
+                    </div>
+ -->
 
 
             </article>
