--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -71,6 +71,8 @@
                                 <button type="reset">Cancelar</button>
                             </div>
 
+                        </form>
+
 
                     </div>
 
