--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -194,7 +194,7 @@ header {
   height: 100%;
   width: 100%;
   top: 40px;
-  left: 25px;
+  left: 20px;
   height: 22px;
   width: 22px;
 }
@@ -410,3 +410,20 @@ footer {
   margin: 5px;
 }
 
+@media(max-width:320px){
+  .sidebarIconToggle {
+ 
+  top: 50px;
+  left: 150px;
+  height: 22px;
+  width: 22px;
+ 
+  
+
+  }
+}
+@media(min-width:760px){
+
+
+  
+}
