--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -78,10 +78,10 @@ header {
 
 
 .icon-cart {
-  display: block;
+  display: flex;
   width: 15%;
   padding-right: 3%;
-
+  padding-left: 3%;
 }
 
 .icon-cart i {
@@ -409,6 +409,8 @@ footer {
   opacity: 80%;
   margin: 5px;
 }
+/* MEDIA QUERIES */
+
 
 @media(max-width:320px){
   .sidebarIconToggle {
@@ -423,7 +425,15 @@ footer {
   }
 }
 @media(min-width:760px){
-
-
-  
 }
+
+  /* carrito */
+
+@media(max-width:320px){
+    
+  .icon-cart {
+  order:-1;
+  padding-left: 1%;
+
+}   
+  }
