--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -23,7 +23,7 @@
                     <div class="contenedor-registro">
 
 
-                        <form action="/register" method="POST">
+                        <form class="form-registro" action="/register" method="POST">
 
 
                             <div>
@@ -62,14 +62,11 @@
                                     id="confirmar contraseña" placeholder=" Confirma tu contraseña">
                             </div>
 
-                            <div class="div-button">
+                            <div class="div-enviar">
                                 <button type="submit">Enviar</button>
 
                             </div>
 
-                            <div class="div-button">
-                                <button type="reset">Cancelar</button>
-                            </div>
 
                         </form>
 
