--- a/src/views/results.ejs
+++ b/src/views/results.ejs
@@ -5,7 +5,8 @@
 
     <%- include('partials/headLinks') %>
 
-
+    <link rel="stylesheet" href="/css/style-producto.css">
+    
 <body>
     <!-- headerMain y headerSidebar-->
     <%- include('partials/header') %>
