--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -3,8 +3,8 @@
 <footer>
     <div class="footer-nav">
         <div class="footer-nav1">
-            <a href="/inicia-sesion">Iniciar Sesion</a><br>
-            <a href="/registro">Registrarse</a><br>
+            <a href="/users/inicia-sesion">Iniciar Sesion</a><br>
+            <a href="/users/registro">Registrarse</a><br>
             <a href="/">Nosotros</a><br>
         </div>
         <div class="footer-nav2">
