--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -107,9 +107,9 @@
                 <form action="categoria" method="GET">
                     <label class="titulo-categoria">Cat. :</label><br>
                     <select class="opciones-categoria" name="categoria">
-                        <option value="cat1" selected>Categoria 1</option>
-                        <option value="cat2">Categoria 2</option>
-                        <option value="cat3">Categoria 3</option>
+                        <option value="cat1" selected>Perros</option>
+                        <option value="cat2">Gatos</option>
+                        <option value="cat3">Perros y Gatos</option>
                     </select>
                 </form>
             </div>
