--- a/public/css/style-producto.css
+++ b/public/css/style-producto.css
@@ -7,7 +7,7 @@
   --gris-oscuro: rgba(128, 128, 128, 0.247);
 }
 /* Buscador - Producto */
-
+/* 
 .buscarPorNombre {
   position: fixed;
   width: 90vw;
@@ -21,8 +21,7 @@
   font-size: 12px;
   padding: 5px;
   text-align: center;
-
-}
+} */
 
 .resumen-producto{
   width: 96vw;
