--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -27,9 +27,9 @@
                         <form action="categoria" method="GET">
                             <label class="titulo-categoria">Categoría:</label>
                             <select class="opciones-categoria" name="categoria">
-                                <option value="cat1" selected>Categoria 1</option>
-                                <option value="cat2">Categoria 2</option>
-                                <option value="cat3">Categoria 3</option>
+                                <option value="cat1" selected>Perros</option>
+                                <option value="cat2">Gatos</option>
+                                <option value="cat3">Perros y Gatos</option>
                             </select>
                         </form>
                     </div>
@@ -75,9 +75,9 @@
                         <form action="categoria" method="GET">
                             <label class="titulo-categoria">Categoría:</label>
                             <select class="opciones-categoria" name="categoria">
-                                <option value="cat1">Categoria 1-Perros</option>
-                                <option value="cat2" selected>Categoria 2-Gatos</option>
-                                <option value="cat3">Categoria 3-Perros y Gatos</option>
+                                <option value="cat1">Perros</option>
+                                <option value="cat2" selected>Gatos</option>
+                                <option value="cat3">Perros y Gatos</option>
                             </select>
                         </form>
                     </div>
