css home-productos-detalle productos

--- a/src/views/detalle-producto.ejs
+++ b/src/views/detalle-producto.ejs
@@ -57,9 +57,9 @@
                 <div class="eliminar-producto" strong>
                 <form method="POST" action="/productos/eliminar-producto/<%= guarderia.id %>/?_method=DELETE">
 
-                    <button type="submit">Eliminar Producto</strong>
-                        <i class="fas fa-paw huellita-reserva"></i>
+                    <button class="boton-eliminar" type="submit">Eliminar Producto</strong>
                     </button>
+                    <i class="fas fa-paw huellita-reserva"></i>
                 </form>
                 </div>
 
