--- a/public/css/style-producto.css
+++ b/public/css/style-producto.css
@@ -23,6 +23,157 @@
   text-align: center;
 } */
 
+
+
+/* Flex's */
+
+article {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  padding: 20px;
+}
+
+.imagenGuarderia{
+  width: 70%;
+  text-align:center;
+  display:block;
+  margin:0px auto;
+}
+
+
+h1 {
+  font-size: 20px;
+}
+
+.nombre-guarderia {
+  font-size: 20px;
+  color: #3f4e4a;
+  font-weight: bold;
+  text-align: center;
+}
+
+.precios {
+  text-align: center;
+}
+
+.estrellas {
+  color: #3f7552;
+  display: block;
+  text-align: center;
+}
+
+.cuerpo-detalle {
+  font-size: 15px;
+  text-align: center;
+}
+
+div.cuerpo-detalle {
+  padding: 20px;
+  text-align: justify;
+  background-color: var(--gris);
+  border-radius: 10px;
+  margin-bottom: 10px;
+}
+
+.reservar,
+.editar-producto,
+.crear-producto,
+.eliminar-producto {
+  display: block;
+  text-align: center;
+  text-decoration: none;
+}
+
+
+.reservar a,
+.editar-producto a,
+.crear-producto a,
+.boton-eliminar {
+  font-size: 14px;
+  display: inline-block;
+  margin: 10px auto 10px auto;
+  text-align: center;
+  text-decoration: none;
+  color: var(--verde-oscuro);
+  border: none;
+  padding: 5px 15px;
+  border-radius: 5px;
+  background-color: #c7dae0;
+}
+
+.boton-eliminar {
+  
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+ul.slider {
+  position: relative;
+  width: 100%;
+  height: 210px;
+  text-align: center;
+}
+
+ul.slider li {
+  position: absolute;
+  left: 0px;
+  top: 0px;
+  opacity: 0;
+  width: inherit;
+  transition: opacity 0.5s;
+  background: #fff;
+}
+
+ul.slider li img {
+  height: 250px;
+  object-fit: cover;
+  width: 60%;
+  display: inline-block;
+  margin: auto;
+  margin: 5px;
+  padding: 5px;
+  margin-top: 50px;
+}
+
+ul.slider li:first-child {
+  opacity: 1; /*Mostramos el primer <li>*/
+}
+
+ul.slider li:target {
+  opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
+}
+
+.menu-articulo1,
+.menu-articulo2 {
+  text-align: center;
+  margin-top: 30px;
+}
+
+.menu-articulo1 li,
+.menu-articulo2 li {
+  display: inline-block;
+  text-align: center;
+}
+
+.menu-articulo1 a,
+.menu-articulo2 a {
+  display: inline-block;
+  color: white;
+  text-decoration: none;
+  background-color: #3f7552;
+  padding: 5px;
+  font-size: 15px;
+  border-radius: 100%;
+}
+
+/* Modal Resumen - Buscador */
+
 .resumen-producto{
   width: 96vw;
   position: sticky;
@@ -110,219 +261,3 @@
   font-family: sans-serif;
   font-size: 12px;
 }
-
-/* Flex's */
-
-article {
-  display: flex;
-  flex-direction: column;
-  width: 100%;
-  padding: 50px;
-  margin-bottom: 10px;
-}
-
-.imagenGuarderia{
-  width: 65%;
-  text-align:center;
-  display:block;
-  margin:0px auto;
-}
-
-/* Slider article */
-
-.container {
-  margin: 20px;
-  background-color: white;
-  width: 100%;
-}
-
-
-h1 {
-  font-size: 20px;
-}
-
-.nombre-guarderia {
-  font-size: 25px;
-  color: #3f4e4a;
-  font-weight: bold;
-  text-align: center;
-}
-
-.precios {
-  text-align: center;
-}
-
-.estrellas {
-  color: #3f7552;
-  display: block;
-  text-align: center;
-}
-
-.cuerpo-detalle {
-  font-size: 15px;
-  text-align: center;
-}
-
-div.cuerpo-detalle {
-  padding: 20px;
-  text-align: justify;
-  background-color: var(--gris);
-  border-radius: 10px;
-  margin-bottom: 10px;
-}
-
-.reservar {
-  text-decoration: none;
-  font-weight: 300;
-  font-size: 18px;
-  color: #333333;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 40%;
-  padding-right: 40%;
-  background-color: #bccfd6;
-  border-color: #9fb7bc;
-  border-width: 3px;
-  border-style: solid;
-  border-radius: 25px;
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
-}
-
-.reservar a {
-  text-decoration: none;
-  color: #333333;
-}
-
-.editar-producto,
-.eliminar-producto {
-  text-decoration: none;
-  font-weight: 300;
-  font-size: 18px;
-  color: #333333;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 40%;
-  padding-right: 40%;
-  background-color: #bccfd6;
-  border-color: #9fb7bc;
-  border-width: 3px;
-  border-style: solid;
-  border-radius: 25px;
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  text-align:center;
-
-}
-
-.eliminar-producto button {
-  background-color: #bccfd6;
-  border: none;
-  text-decoration: none;
-  color: #333333;
-  font-weight: 300;
-  font-size: 18px;
-}
-
-.editar-producto a {
-  text-decoration: none;
-  color: #333333;
-
-}
-
-.crear-producto{
-  text-decoration: none;
-  font-weight: 300;
-  font-size: 18px;
-  color: #333333;
-  padding-top: 15px;
-  padding-bottom: 15px;
-  padding-left: 40%;
-  padding-right: 40%;
-  background-color: #bccfd6;
-  border-color: #9fb7bc;
-  border-width: 3px;
-  border-style: solid;
-  border-radius: 25px;
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 10px;
-  text-align:center;
-
-}
-
-.crear-producto a{
-  text-decoration: none;
-  color: #333333;
-
-}
-
-ul,
-li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
-}
-
-ul.slider {
-  position: relative;
-  width: 100%;
-  height: 210px;
-  text-align: center;
-}
-
-ul.slider li {
-  position: absolute;
-  left: 0px;
-  top: 0px;
-  opacity: 0;
-  width: inherit;
-  transition: opacity 0.5s;
-  background: #fff;
-}
-
-ul.slider li img {
-  height: 250px;
-  object-fit: cover;
-  width: 60%;
-  display: inline-block;
-  margin: auto;
-  margin: 5px;
-  padding: 5px;
-  margin-top: 50px;
-}
-
-ul.slider li:first-child {
-  opacity: 1; /*Mostramos el primer <li>*/
-}
-
-ul.slider li:target {
-  opacity: 1; /*Mostramos el <li> del enlace que pulsemos*/
-}
-
-.menu-articulo1,
-.menu-articulo2 {
-  text-align: center;
-  margin-top: 30px;
-}
-
-.menu-articulo1 li,
-.menu-articulo2 li {
-  display: inline-block;
-  text-align: center;
-}
-
-.menu-articulo1 a,
-.menu-articulo2 a {
-  display: inline-block;
-  color: white;
-  text-decoration: none;
-  background-color: #3f7552;
-  padding: 5px;
-  font-size: 15px;
-  border-radius: 100%;
-}
-
