--- a/src/views/productos.ejs
+++ b/src/views/productos.ejs
@@ -3,21 +3,21 @@
 
 <!-- head  -->
 
-    <%- include('partials/headLinks') %>
+<%- include('partials/headLinks') %>
 
     <link rel="stylesheet" href="/css/style-producto.css">
 
 
-<body>
-    <!-- headerMain y headerSidebar-->
-    <%- include('partials/header') %>
+    <body>
+        <!-- headerMain y headerSidebar-->
+        <%- include('partials/header') %>
 
 
-    <!-- Main -->
+            <!-- Main -->
 
-    <main>
+            <main>
 
-         <!--
+                <!--
 
         <div class="buscarPorNombre">
             <label>Buscar por nombre:</label>
@@ -48,100 +48,86 @@
 
                 <section class="articulos">
 
-                <% productos.forEach(guarderia => { %>
+                    <% productos.forEach(guarderia=> { %>
+
+                        <article class="articulo1">
+
+                            <p class="centrado">
+                                <img src="/img/guarderias/<%= guarderia.imagen %> " alt="guarderia1"
+                                    class="imagenGuarderia">
+                            </p>
+                            <div class="nombre-guarderia">Guarderia <%= guarderia.nombre %></div>
+                            <div class="precios">$<%= guarderia.precio %></div>
+                            <div class="estrellas">
+                                <i class="fas fa-star"></i> <i class="fas fa-star"></i>
+                                <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                            </div>
+                            <div class="cuerpo-detalle">
+                                <h3>Características</h3>
+                                <p>
+                                    <%= guarderia.caracteristicas %>
+                                </p>
+                                <h3>Instalaciones</h3>
+                                <p>
+                                    <%= guarderia.instalaciones %>
+                                </p>
+                                <h3>Categoria</h3>
+                                <p>
+                                    <%= guarderia.categoria %>
+                                </p>
+                            </div>
+
+                            <div class="reservar" strong>
+                                <a href="/productos/detalle-producto/<%= guarderia.id  %>">Ver Guarderia</a></strong>
+                                <i class="fas fa-paw huellita-reserva"></i>
+                            </div>
+                        </article>
+
+                        <% }) %>
 
 
-                <article class="articulo1">
+                </section>
 
-<p class="centrado">
-                    <img src= "/img/guarderias/<%= guarderia.imagen %> " alt="guarderia1" class="imagenGuarderia"></p>
-                    <div class="nombre-guarderia">Guarderia <%= guarderia.nombre %> </div>
-                    <div class="precios">$<%= guarderia.precio %></div>
-                    <div class="estrellas">
-                        <i class="fas fa-star"></i> <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <div class="resumen-producto">
+                    <div class="categoria-producto">
+                        <form action="categoria" method="GET">
+                            <label class="titulo-categoria">Cat. :</label><br>
+                            <select class="opciones-categoria" name="categoria">
+                                <option value="cat1" selected>Perros</option>
+                                <option value="cat2">Gatos</option>
+                                <option value="cat3">Perros y Gatos</option>
+                            </select>
+                        </form>
                     </div>
 
-                    <div class="cuerpo-detalle">
-
-                        <h3>Características</h3>
-                        <p><%= guarderia.caracteristicas %> </p>
-                        <h3>Instalaciones</h3>
-                        <p><%= guarderia.instalaciones %> </p>
-                        <h3>Categoria</h3>
-                        <p><%= guarderia.categoria %> </p>
-
+                    <div class="fechas-producto">
+                        <label>Desde:</label><input type="date" name="fechaIngreso" value="2022-04-22" min="2022-04-01"
+                            max="2023-12-31">
+                        <label>Hasta:</label><input type="date" name="fechaSalida" value="2022-04-27" min="2022-04-01"
+                            max="2023-12-31">
                     </div>
-
-                    <div class="reservar" strong>
-                        <a href="/productos/detalle-producto/<%= guarderia.id  %>">Ver Guarderia</a></strong>
-                        <i class="fas fa-paw huellita-reserva"></i>
+                    <div class="cantidad">
+                        <div class="mascota">
+                            <i class="fas fa-dog"></i>
+                            <i class="fas fa-plus"></i>
+                            <div>0</div>
+                            <i class="fas fa-minus"></i>
+                        </div>
+                        <div class="mascota">
+                            <i class="fas fa-cat"></i>
+                            <i class="fas fa-plus"></i>
+                            <div>1</div>
+                            <i class="fas fa-minus"></i>
+                        </div>
                     </div>
-
-                    <!-- <div class="editar-producto" strong>
-                        <a href="/productos/editar-producto/<%= guarderia.id %>">Editar producto</a></strong>
-                        <i class="fas fa-paw huellita-reserva"></i>
-                    </div>
-
-                    <div class="crear-producto" strong>
-                        <a href="/productos/crear-producto">Crear Producto</a></strong>
-                        <i class="fas fa-paw huellita-reserva"></i>
-                    </div>
-
-                    <div class="eliminar-producto" strong>
-                        <a href="/productos/eliminar-producto">Eliminar Producto</a></strong>
-                        <i class="fas fa-paw huellita-reserva"></i>
-                    </div>
- -->
-
-
-            </article>
-
-          <% }) %>
-
-
-        </section>
-
-        <div class="resumen-producto">
-            <div class="categoria-producto">
-                <form action="categoria" method="GET">
-                    <label class="titulo-categoria">Cat. :</label><br>
-                    <select class="opciones-categoria" name="categoria">
-                        <option value="cat1" selected>Perros</option>
-                        <option value="cat2">Gatos</option>
-                        <option value="cat3">Perros y Gatos</option>
-                    </select>
-                </form>
-            </div>
-
-            <div class="fechas-producto">
-                <label>Desde:</label><input type="date" name="fechaIngreso" value="2022-04-22" min="2022-04-01"
-                    max="2023-12-31">
-                <label>Hasta:</label><input type="date" name="fechaSalida" value="2022-04-27" min="2022-04-01"
-                    max="2023-12-31">
-            </div>
-            <div class="cantidad">
-                <div class="mascota">
-                    <i class="fas fa-dog"></i>
-                    <i class="fas fa-plus"></i>
-                    <div>0</div>
-                    <i class="fas fa-minus"></i>
                 </div>
-                <div class="mascota">
-                    <i class="fas fa-cat"></i>
-                    <i class="fas fa-plus"></i>
-                    <div>1</div>
-                    <i class="fas fa-minus"></i>
-                </div>
-            </div>
-        </div>
 
-    </main>
+            </main>
 
-    <!-- Footer -->
-    <%- include('partials/footer') %>
+            <!-- Footer -->
+            <%- include('partials/footer') %>
 
 
-</body>
+    </body>
 
 </html>
