rutas de redes sociales corregidas del footer

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -15,9 +15,9 @@
     </div>
     <div class="redes">
         <h4>SEGUINOS EN NUESTRAS REDES</h4>
-        <a href="/"><i class="fab fa-facebook-square"></i></a>
-        <a href="/"><i class="fab fa-instagram-square"></i></a>
-        <a href="/"><i class="fab fa-twitter-square"></i></a>
+        <a href="https://facebook.com"><i class="fab fa-facebook-square"></i></a>
+        <a href="https://instagram.com"><i class="fab fa-instagram-square"></i></a>
+        <a href="https://twitter.com"><i class="fab fa-twitter-square"></i></a>
     </div>
     <h6 class="copyright">Copyright © 2022 AlojaMascotas S.R.L.</h6>
 
