sprint cinco, creacion de usuario

--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -23,27 +23,36 @@
                     <div class="contenedor-registro">
 
 
-                        <form class="form-registro" action="/register" method="POST">
+                        <form class="form-registro" action="/register" method="POST" enctype="multipart/form-data">
 
 
                             <div>
-                                <label>Nombre de usuario:</label>
-                                <input type="text" name="nombre de usuario" required>
+                                <label>Nombre:</label>
+                                <input type="text" name="first_name" required>
                             </div>
 
+                            <div>
+                                <label>Apellido:</label>
+                                <input type="text" name="last_name" required>
+                            </div>
                             <div>
                                 <label>Fecha de nacimiento:</label>
-                                <input type="date" name="fecha de nacimiento" required>
+                                <input type="date" name="date" required>
                             </div>
-
+                            
                             <div>
                                 <label>Domicilio:</label>
-                                <input type="text" name="Domicilio" placeholder=" Calle y numero" required>
+                                <input type="text" name="adress" placeholder=" Calle y numero" required>
                             </div>
 
                             <div>
                                 <label>E-mail:</label>
                                 <input type="email" name="email" required>
+                            </div>
+
+                            <div>
+                                <label>Imagen de perfil</label>
+                                <input type="file" name="imagenUsuario">
                             </div>
 
                             <div>
@@ -60,7 +69,9 @@
                             <div class="div-confirmar-clave">
                                 <input name="password" type="password" value="" class="form-control"
                                     id="confirmar contraseña" placeholder=" Confirma tu contraseña">
+                            
                             </div>
+
 
                             <div class="div-enviar">
                                 <button type="submit">Enviar</button>
