--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -23,7 +23,7 @@
                     <div class="contenedor-registro">
 
 
-                        <form class="form-registro" action="/register" method="POST" enctype="multipart/form-data">
+                        <form class="form-registro" action="/users/registro" method="POST" enctype="multipart/form-data">
 
 
                             <div>
