vista de registro

--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -67,6 +67,7 @@
                             </div>
 
                             <div class="div-confirmar-clave">
+                                <label> Confirmar Contraseña:</label>
                                 <input name="password" type="password" value="" class="form-control"
                                     id="confirmar contraseña" placeholder=" Confirma tu contraseña">
                             
