--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -67,14 +67,8 @@
                             </div>
 
                             <div class="div-confirmar-clave">
-<<<<<<< HEAD
-                                <input name="passwordConfirm" type="password" value="" class="form-control"
-=======
                                 <label> Confirmar Contraseña:</label>
-                                <input name="password" type="password" value="" class="form-control"
->>>>>>> 2917516029a09d416bc676c4ccd8e0a8f0400ff1
-                                    id="confirmar contraseña" placeholder=" Confirma tu contraseña">
-                            
+                                <input name="passwordConfirm" type="password" value="" class="form-control">
                             </div>
 
 
