fix ruta crear cuenta

--- a/src/views/inicia-sesion.ejs
+++ b/src/views/inicia-sesion.ejs
@@ -44,7 +44,7 @@
                             </div>
                         </form>
 
-                        <a class="boton-crear-cuenta" href="/registro">CREAR CUENTA</a>
+                        <a class="boton-crear-cuenta" href="/users/registro">CREAR CUENTA</a>
 
                         <div class="contenedor-olvidaste-contraseña">
                             <a class="Olvidaste-contraseña" href="#">¿Has olvidado tu contraseña?</a>
