--- a/src/views/detalle-profile.ejs
+++ b/src/views/detalle-profile.ejs
@@ -20,6 +20,8 @@
                 <div class="infouser">Direccion<%= user.adress %></div>
                 <div class="infouser">Correo Electronico<%= user.email %></div>
                 <div class="infouser">DNI<%= user.dni %></div>
+
+                <div> <a href="/users/logout">LOGOUT<a></div>
             </main>
 
             <!-- Footer -->
