--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -12,7 +12,7 @@
     <div class="logo-menu"><i class="fas fa-bars" alt="logo menu"></i></div>
     <div class="vacio"></div>
     <div class="logo"><a href="/"><img class="logo-alojamascotas" src="/img/group.svg" alt="logo de la empresa"></a></div>
-    <div class="logo-cuenta"><a href="/users/inicia-sesion"><i class="fas fa-user-circle" alt="logo cuenta"></i></a></div>
+    <div class="logo-cuenta"><a href="/users/detalle-profile"><i class="fas fa-user-circle" alt="logo cuenta"></i></a></div>
     <div class="icon-cart"><a href="/productos/carrito"><i class="fas fa-shopping-cart" alt="logo carrito"></i></a></div>
   </section>
   <section class="subheader">
@@ -33,7 +33,7 @@
   </label>
   <div id="sidebarMenu">
     <ul class="sidebarMenuInner">
-      <li><a href="/users/inicia-sesion">Mi Cuenta</a></li>
+      <li><a href="/users/detalle-profile">Mi Cuenta</a></li>
       <li><a href="/productos/productos">Guarderias</a></li>
       <li><a href="/productos/crear-producto">Crear Producto</a></li>
       <li><a href="/">Nosotros</a></li>
