--- a/public/css/style-detalle-profile.css
+++ b/public/css/style-detalle-profile.css
@@ -24,12 +24,26 @@
 }
 
 .logout a {
-  padding: 10px;
-  margin-top: 5px;
- margin-bottom: 15px;
+ text-align: center;
+ background-color: #c7dae0;
+ padding: 5px 15px;
+ border-radius: 5px;
+ display: block;
+ margin: 10px auto 10px auto;
+color:#3f4e4a;
+font-weight: bold;
 }
 
 .profile-body {
-  padding: 20px;
-  display: block;
+    text-align: center;
 }
+
+.profile-text {
+    padding: 20px;
+    text-align: justify;
+    background-color: var(--gris);
+    border-radius: 10px;
+    margin-bottom: 10px;
+
+}
+
