--- a/src/views/registro.ejs
+++ b/src/views/registro.ejs
@@ -70,12 +70,17 @@
                                 <label> Confirmar Contraseña:</label>
                                 <input name="passwordConfirm" type="password" value="" class="form-control">
                             </div>
-
+                        
+                            <div>
+                                <label for="">Recordame</label>
+                                <input type="checkbox" name="recordame">
+                            </div>
 
                             <div class="div-enviar">
                                 <button type="submit">Enviar</button>
 
                             </div>
+                           
 
 
                         </form>
